# SplitToDelaunay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
src/: CMakeLists.txt  Interval.cpp  Interval.h  Splitter.cpp  Splitter.h  delaunay.cpp  delaunay.h  main.cpp  my_assert.cpp  my_assert.h
src/tests/: CMakeLists.txt  SplitterTests.h  test.cpp  test_utils.h
